# Whale

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
assembler/src/: assembler.rs  ast.rs  error.rs  lib.rs  tokens.rs  traits.rs
assembler/src/isa/: mod.rs
assembler/src/isa/amd64/: encoder.rs  mod.rs  parser.rs  tables.rs
assembler/src/isa/amd64/encoding/: address.rs  mod.rs  modrm.rs  rex.rs  sib.rs
assembler/test/: competitor_test.asm  full_test.asm  mem_test.asm  msg.asm  test1.asm
assembler/test/massive/: test_001.asm  test_002.asm  test_003.asm  test_004.asm  test_005.asm  test_006.asm  test_007.asm  test_008.asm  test_009.asm  test_010.asm
docs/cli/: asm.md  object.md
ir/: Cargo.toml
ir/src/: block.rs  builder.rs  function.rs  instr.rs  lib.rs  module.rs  printer.rs  types.rs  value.rs  verifier.rs
ir/src/lower_ast/: binding.rs  error.rs  frontend.rs  mod.rs  o0.rs  support.rs
ir/src/zero/: mod.rs  pass.rs
linker/: Cargo.toml
linker/src/: lib.rs
linker/src/core/: layout.rs  linker.rs  mod.rs  symbol_table.rs
object/: Cargo.toml
object/src/: lib.rs
object/src/core/: mod.rs  object.rs  reloc.rs  section.rs  symbol.rs
object/src/formats/: elf.rs
src/: cli.rs  dummy.rs  lib.rs  main.rs
src/commands/: asm.rs  ir.rs  linker.rs  mod.rs  object.rs
