[workspace]
members = [
    "assembler",
    "object",
    "linker", "ir",
]

[package]
name = "whale"
version = "0.1.0"
edition = "2021"

[features]
default = []
socket-cli = ["ir/socket", "dep:serde_json"]

[dependencies]
assembler = { path = "assembler" }
object = { path = "object" }
ir = { path = "ir", default-features = false }
serde_json = { version = "1", optional = true }
